<resources>



    <string name="app_name">MyFridge</string>
    <string name="action_settings">Settings</string>

    <string name="undo">Undo</string>

    <string name="product_title_min_length">Product title\'s length should be more than 1 symbol</string>


    <string name="no_expire_date">No expire date</string>

    <!--Toasts-->
    <string name="no_title_entered">Please, enter title for your product</string>
    <string name="no_quantity_entered">Please, enter quantity for your product</string>
    <string name="no_quantity">Please, specify quantity of your product or delete it.</string>

    <string name="delete">Delete</string>
    <string name="removed">removed</string>

    <!--Change quantity dialog -->
    <string name="change_product_title">Change data</string>
    <string name="change_quantity">Change quantity</string>

    <!-- New product dialog -->
    <string name="new_product_title">New product</string>
    <string name="product_title">Title</string>
    <string name="product_expire_date">Expire date</string>
    <string name="product_quantity">Quantity</string>

    <!-- Permission grant -->
    <string name="permission_grant_msg">Grant this permissions to add photos of your product</string>

    <!-- Select image alert dialog -->
    <string name="select_image_title">Choose product picture</string>
    <string name="take_photo_option">Take photo</string>
    <string name="gallery_option">Choose from gallery</string>

</resources>
